# llm-evaluate-debugger-mcp-server

./: .gitignore  README.md  debug_hooks.py  filesystem.py  llm_debugger.py  pyproject.toml  tdb_walkthrough.md
examples/: README.md  codechat_debug.py  mathgpt_debug.py  translate_en2zh_debug.py
tdb_hooks/: __init__.py  adapters.py  attach.py  attention.py  core.py
